2004-08-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add another krb5 headers options, fix small errors
	in previous commit.

2004-08-13  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-delegates.c (exchange_delegates): Checking for NULL
	account. The tree view was returning a NULL account. This fixes #62248
	* calendar/e-cal-backend-exchange-calendar.c (update_x_properties):
	Fixed a build break.

2004-08-13  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-autoconfig-wizard.c: (autoconfig_gui_apply)
	Not allowing the user to create new account if already one
	account exists. 
	(is_active_exchange_account): Checks if account exists and active.
	Fixes #61330

2004-08-12  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* configure.in:
	Add option to specify location of kerberos 5 libraries.
	Needed for 64bits support.

2003-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: (update_x_properties)
	Modified the logic to now use separate flags. This fixes #62852

2003-08-12  Sushma Rai  <rsushma@novell.com>
	
	* storage/exchange-account.c (get_password): Incoporated
	e_passwords_ask_password() API change.

2004-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (remove_object): Remove
	recurrences only if rid is not NULL. This fixes the crash in #62631

2004-08-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (discard_alarm):
	Moved this from e-cal-backend-exchange.c, since this should be in the
	calendar derived class and not in the abstract class. This fixes #45103
	* calendar/e-cal-backend-exchange.c (discard_alarm): Now just returns
	an error
	(remove_calendar): Removed some warnings.
 
2004-08-12  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-context.c (write_prop): Checking for value of property
	being NULL. This fixes the crash #62259, But Internet Newsgroup 