@@ -1,3 +1,9 @@
+2004-08-13  Rodney Dawes  <dobey@novell.com>
+
+	* acinclude.m4: Remove EVO_CHECK_LIB
+	Update EVO_LDAP_CHECK to support --with-openldap-{libs,includes}
+	Sync with e-d-s acinclude.m4 (Adds GTK_DOC_CHECK)
+
 2004-08-13  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* configure.in:
